Adding temp work in my repo to sync at systems
(Just to avoid scp copy-paste)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,11 @@ set(SERVER_SRC
     src/netconf_monitoring.c
     src/netconf_acm.c
     src/netconf_nmda.c
-    src/log.c)
+    src/log.c
+    sp/notif_send_example.c
+    sp/notif_subscribe_example.c  
+    sp/rpc_send_example.c 
+    sp/rpc_subscribe_example.c)
 
 # at least some remote transport is enabled
 if(LIBNETCONF2_ENABLED_SSH OR LIBNETCONF2_ENABLED_TLS)
